Fixed scroll on mobile

--- a/technical-documentation-page/style.css
+++ b/technical-documentation-page/style.css
@@ -85,7 +85,7 @@ nav ul li a:hover{
 main{
     scroll-behavior: smooth;
     overflow-y: scroll;
-    height: 100vh;
+    height: 100%;
 }
 main .container{
     margin-top:5rem;
